--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,6 @@ set(CMAKE_CXX_STANDARD 14)
 SET(OpenCV_DIR /home/pi/installation/OpenCV-master/lib/cmake/opencv4)
 find_package( OpenCV REQUIRED )
 add_executable(Ariadne Ariadne.cpp)
+set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "program.out")
 target_link_libraries( Ariadne ${OpenCV_LIBS} )
+
