--- a/.gitignore
+++ b/.gitignore
@@ -34,5 +34,15 @@
 
 
 # folder
-CMakeFiles/
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
 
