splitted and worked changes to cmakelists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,10 @@ project(Ariadne)
 set(CMAKE_CXX_STANDARD 14)
 SET(OpenCV_DIR /home/pi/installation/OpenCV-master/lib/cmake/opencv4)
 find_package( OpenCV REQUIRED )
-add_executable(Ariadne Ariadne.cpp)
+
+include_directories(${/AriadneFiles}) 
+
+add_executable(Ariadne Ariadne.cpp AriadneFiles/GeoPoint.cpp AriadneFiles/DMatchSort.cpp AriadneFiles/DMatchSort.h AriadneFiles/GeoPoint.h)
 set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "program.out")
 target_link_libraries( Ariadne ${OpenCV_LIBS} )
 
